# GrandPrixManager

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
data/: CarsData.cpp  CarsData.hpp  ClassificationData.cpp  ClassificationData.hpp  ConditionsData.cpp  ConditionsData.hpp  DriversData.cpp  DriversData.hpp  TeamsData.cpp  TeamsData.hpp  TracksData.cpp  TracksData.hpp
model/: Car.cpp  Car.hpp  Conditions.cpp  Conditions.hpp  Driver.cpp  Driver.hpp  PitStop.cpp  PitStop.hpp  PitWall.cpp  PitWall.hpp  SessionInfo.cpp  SessionInfo.hpp  Team.cpp  Team.hpp  Tires.cpp  Tires.hpp  Track.cpp  Track.hpp
simulator/: GrandPrix.cpp  GrandPrix.hpp  GrandPrixSession.cpp  GrandPrixSession.hpp  ISimulator.hpp  Season.cpp  Season.hpp
simulator/qualiSimulator/: QualiSimulator.cpp  QualiSimulator.hpp
simulator/raceSimulator/: RaceSimulator.cpp  RaceSimulator.hpp
utils/: Constants.cpp  Constants.hpp  Randomizer.hpp  TireType.hpp  TrackConditions.hpp
viewer/: Viewer.cpp  Viewer.hpp
